# final_project

./: README.md  code.py  index.html
UART&LCD/: CMakeLists.txt  LCD_st7735.h  hello_LCD.c  rxtx.c  uart_rx.pio.h  uart_tx.pio.h
